# XORCoder

./: CMakeLists.txt  README.md  build.ps1
include/: types.h  utils.h
src/: main.cpp  types.cpp  utils.cpp
